--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ nav {
     <nav>
         <div class="logo">
             <!-- Logo image (PNG) - relative path from this file to ../umbrella innovation.png -->
-            <img src="umbrella innovation.png" alt="Umbrella Innovations logo" class="logo-icon">
+            <img src="./umbrella innovation.png" alt="Umbrella Innovations logo" class="logo-icon">
             <span style="font-size: 1.8rem; font-weight: bold; color: #1f2937;">Umbrella Innovations</span>
             <!--<span class="arabic-name">(مظلة للإبتكار)</span> -->
         </div>
